Run with Ubuntu 16.04, Python3, and Jupyter

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,6 +4,7 @@
 
   vars:
     downloads_directory: "{{ ansible_env.HOME }}/downloads"
+    ansible_python_interpreter: /usr/bin/python3
   vars_files:
     - variables.yml
 
