--- a/ansible/roles/python_tools/tasks/main.yml
+++ b/ansible/roles/python_tools/tasks/main.yml
@@ -3,8 +3,8 @@
 - name: Install python tools
   apt: name={{item}} state=installed
   with_items:
-    - python-pip
-    - python-dev
+    - python3-pip
+    - python3-dev
     - build-essential
 - name: Install python pytest
   pip: name=pytest
@@ -14,3 +14,5 @@
   pip: name=findspark
 - name: Install python boto3
   pip: name=boto3
+- name: Install python jupyter notebook
+  pip: name=jupyter
