--- a/ansible/roles/spark/tasks/main.yml
+++ b/ansible/roles/spark/tasks/main.yml
@@ -10,4 +10,12 @@
               regexp='PATH=(["]*)((?!.*?/usr/local/spark/bin).*?)(["]*)$'
               line="PATH=\1\2:/usr/local/spark/bin\3"
 - name: Set SPARK_HOME
-  lineinfile: dest=/etc/environment state=present regexp='^SPARK_HOME' line='SPARK_HOME=/usr/local/spark'
+  lineinfile: dest=/etc/environment
+              state=present
+              regexp='^SPARK_HOME'
+              line='SPARK_HOME=/usr/local/spark'
+- name: Set PYSPARK_PYTHON
+  lineinfile: dest=/etc/environment
+              state=present
+              regexp='^PYSPARK_PYTHON'
+              line='PYSPARK_PYTHON=python3'
