Agregar ipython-parallel; descargar Scala y Spark a archivo, y luego "symlink".
Anteriormente, Scala y Python se descargaban y descomprimían en un solo paso.
Para hacer este paso repetible, ahora se descargan a un archivo, se desempacan
este archivo a /usr/local, y finalmente se hace un symbolic link desde
/usr/bin/scala y /usr/bin/spark, respectivamente.

También se agrega iPython-Parallel para poder ver el status del cluster de Spark
desde Jupyter.

--- a/ansible/roles/python_tools/tasks/main.yml
+++ b/ansible/roles/python_tools/tasks/main.yml
@@ -17,4 +17,4 @@
 - name: Install python jupyter notebook
   pip: name=jupyter
 - name: Install python ipython-parallel
-  pip: name=ipython-parallel
+  pip: name=ipyparallel
