--- a/ansible/roles/spark/tasks/main.yml
+++ b/ansible/roles/spark/tasks/main.yml
@@ -1,10 +1,18 @@
 ---
-
-- name: Extract Spark {{ spark.version }} with hadoop {{ hadoop.version }}
-  unarchive: src=http://ftp.cc.uoc.gr/mirrors/apache/spark/spark-{{ spark.version }}/spark-{{ spark.version }}-bin-hadoop{{ hadoop.version }}.tgz
-             dest={{ downloads_directory }} copy=no
-- name: Move Spark to install directory
-  command: mv {{ downloads_directory }}/spark-{{ spark.version }}-bin-hadoop{{ hadoop.version }} /usr/local/spark
+- name: Download Spark {{ spark.version }} with hadoop {{ hadoop.version }}
+  get_url:
+    url=http://ftp.cc.uoc.gr/mirrors/apache/spark/spark-{{ spark.version }}/spark-{{ spark.version }}-bin-hadoop{{ hadoop.version }}.tgz
+    dest={{ downloads_directory }}/spark-{{ spark.version }}-bin-hadoop{{ hadoop.version }}.tgz
+- name: Extract Spark
+  unarchive: 
+    src={{ downloads_directory }}/spark-{{ spark.version }}-bin-hadoop{{ hadoop.version }}.tgz
+    dest=/usr/local
+    copy=no
+- name: Create symlink
+  file:
+    src=/usr/local/spark-{{ spark.version }}-bin-hadoop{{ hadoop.version }}
+    dest=/usr/local/spark
+    state=link
 - name: Add Spark to PATH
   lineinfile: dest=/etc/environment state=present backrefs=yes
               regexp='PATH=(["]*)((?!.*?/usr/local/spark/bin).*?)(["]*)$'
